<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <TextView
             android:id="@+id/passage_one_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#88F807"
             android:padding="@dimen/regular_padding"
             android:text="@string/passage_one_heading"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
             android:textStyle="bold" />

    <TextView
        android:id="@+id/passage_one_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/regular_padding"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:text="@string/passage_one_description" />

         <TextView
             android:id="@+id/passage_two_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#D763EB"
             android:padding="@dimen/regular_padding"
             android:text="@string/passage_two_heading"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
             android:textStyle="bold" />
    <TextView
        android:id="@+id/passage_two_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/regular_padding"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:text="@string/passage_two_description" />

         <TextView
             android:id="@+id/passage_three_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFEB3B"
             android:padding="@dimen/regular_padding"
             android:text="@string/passage_three_heading"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
             android:textStyle="bold" />

    <TextView
        android:id="@+id/passage_three_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/regular_padding"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:text="@string/passage_three_description"/>

     </LinearLayout>

    </ScrollView>



</RelativeLayout>